--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"url": "https://github.com/trespass-studios/jekyll-theme-mediumly/issues"
 	},
 	"homepage": "https://github.com/trespass-studios/jekyll-theme-mediumly#readme",
-	"dependencies": {},
 	"devDependencies": {
-		"parcel": "^2.12.0"
+		"autoprefixer": "^10.4.20",
+		"parcel": "^2.12.0",
+		"postcss": "^8.4.45",
+		"tailwindcss": "^3.4.10"
 	},
 	"scripts": {
 		"test": "test"
