Copied from another theme

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rockmanjoe64
 github_username: rockmanjoe64
+google_analytics: UA-XXXXXXXX-X
 
 plugins:
   - jekyll-postcss
